--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/test
+spring.datasource.url=jdbc:mysql://localhost/demo
 spring.datasource.username=root
 spring.datasource.password=nicai
 
