--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost/demo?serverTimezone=GMT%2B8
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost/stockmis?serverTimezone=GMT%2B8
+spring.datasource.username=sa
 spring.datasource.password=nicai
 
-server.port=1234
+server.port=2345
